# Example-Vulkan-Renderer

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
assets/shaders/: base.vert  base_vert.spv  compile.bat
src/: main.cpp
src/rendering/: camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/util/: geometry.h  gpuhandler.cpp  gpuhandler.h  polygons.h
